Color contrast fixes

--- a/src/app/storage/storage.scss
+++ b/src/app/storage/storage.scss
@@ -20,7 +20,7 @@
   }
 
   .storage-adapter {
-    background: #353535;
+    background: #222;
     margin: 10px 0 0 0;
     padding: 8px;
   }
